--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  /* font-family: sans-serif; */
+  font-family: 'VT323', monospace;
+  background-color: #444649;
+  color: white;
 }
