--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,22 @@ h1.mt-4 {
 }
 
 form {
-  width: 60%;
+  width: 80%;
+}
+
+img {
+  transition: all .2s ease-in-out;
+}
+
+img:hover {
+  cursor: pointer;
+  -ms-transform: scale(1.2); /* IE 9 */
+  -webkit-transform: scale(1.2); /* Safari */
+  transform: scale(1.4);
+}
+
+@media (max-width: 768px) {
+  .my-card {
+    justify-content: center;
+  }
 }
