--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,11 @@ form {
   transform: scale(1.3);
 }
 
+.my-footer {
+  font-size: 15px;
+  background-color: #343a40;
+}
+
 /* loading icon rotating animation */
 i {
   -webkit-animation: spin1 2s infinite linear;
